2022-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-3522.c:
	  Fix bug #3522.

2022-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_startup.c,
	  device/lib/ds390/tinibios.c,
	  device/lib/ez80_z80/crt0.s,
	  device/lib/mcs51/crtstart.asm,
	  device/lib/mcs51/crtxstack.asm,
	  device/lib/mos6502/crt0.s,
	  device/lib/mos6502-stack-auto/crt0.s,
	  device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s,
	  device/lib/sm83/crt0.s,
	  device/lib/tlcs90/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/z80/crt0.s,
	  device/lib/z80n/crt0.s,
	  doc/sdccman.lyx,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/pdk/main.c,
	  src/stm8/main.c,
	  support/regression/ports/mcs51-common/support.c:
	  Rename _sdcc_external_startup to __sdcc_external_startup and make it work for all ports. Fixes bug #3520.

2022-11-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/pretty-print.cc: define some console
	  attribute constants if they are missing
	* support/cpp/gcc/gcc.cc,
	  support/cpp/gcc/opts.cc,
	  support/cpp/gcc/opts-common.cc,
	  support/cpp/gcc/opts-global.cc,
	  support/cpp/gcc/prefix.cc,
	  support/cpp/gcc/toplev.cc,
	  support/cpp/libcpp/lex.cc,
	  support/cpp/libcpp/mkdeps.cc,
	  support/cpp/gcc/c-family/c-opts.cc,
	  support/cpp/gcc/c-family/c-ppoutput.cc:
	  Possible fix for bug #3524

2022-11-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/system.h: don't try to check inodes when
	  compiled for Windows

2022-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/peep.c,
	  src/pdk/gen.c:
	  Pdk peephole infrastructure improvements, patch #446 by Konstantin Kim.

2022-11-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: add cc1.exe
	* support/cpp/gcc/Makefile.in,
	  support/cpp/gcc/cc1_dummies.cc,
	  support/cpp/gcc/c/Make-lang.in,
	  support/cpp/gcc/c-family/c-common.h,