@@ -1,3 +1,10 @@
+2022-12-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/sm83/divint.s,
+	  support/regression/tests/muldiv.c.in,
+	  support/regression/tests/onebyte.c.in:
+	  Fix a % sm83 library issue, patch by Job Bolle.
+
 2022-12-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCopt.c,
